--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@ionic/angular": "^5.1.1",
+    "chart.js": "^2.9.3",
     "ol": "^6.3.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -29,6 +30,8 @@
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
+    "@ionic/angular-toolkit": "latest",
+    "@types/chart.js": "^2.9.20",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -44,7 +47,6 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3",
-    "@ionic/angular-toolkit": "latest"
+    "typescript": "~3.8.3"
   }
 }
